# smol-reason

./: .gitignore  README.md  pyproject.toml  requirements-mac.txt  requirements.txt
configs/: grpo_debug.yaml  grpo_qwen2.5_1.5b.yaml  grpo_qwen2.5_3b_a100x2.yaml  grpo_qwen2.5_3b_a100x3.yaml  grpo_qwen2.5_3b_h100.yaml  grpo_qwen2.5_3b_h200.yaml
inference/: convert_model.py  inference_mlx.py
notebooks/: train_grpo_colab.ipynb
src/: data.py  evaluate.py  rewards.py  train_grpo.py  utils.py
tests/: test_data.py  test_rewards.py
