[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reson-llm"
version = "0.1.0"
description = "Training a reasoning LLM with GRPO (DeepSeek-R1-Zero replication at 1.5B scale)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.48",
    "trl>=0.15",
    "accelerate>=1.3",
    "datasets>=3.2",
    "math-verify>=0.7",
    "wandb",
    "tensorboard",
    "pyyaml",
]

[project.optional-dependencies]
vllm = ["vllm>=0.7"]
mac = ["mlx>=0.22", "mlx-lm>=0.22"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
